Add mod staging, launcher UI, and server instances
Launcher gains a sidebar UI, saved servers, skin manager, dynamic mod
staging/reconciliation, and fullscreen launch, with mandatory Microsoft
sign-in (offline mode removed).

Server wrapper adds a multi-instance engine with active-instance BOM
delegation, an admin SPA, TCP multiplexer, and player/console/metrics
APIs. Add a README with Minecraft EULA compliance notes and dashboard
screenshots.